# Zephyr-Study

./: CMakeLists.txt  README.md  west.yml
.github/workflows/: build.yml
app/boards/: custom_stm32h7b0.overlay
boards/arm/custom_stm32h7b0/: Kconfig.board  Kconfig.defconfig  board.cmake  custom_stm32h7b0.dts  custom_stm32h7b0.yaml
boards/arm/custom_stm32h7b0/support/: openocd.cfg
samples/app/boards/: nucleo_h743zi.overlay
samples/app/src/: main.c
